--- a/template/pwa/css/style.css
+++ b/template/pwa/css/style.css
@@ -105,6 +105,18 @@ body {
     
 }
 
+.allq{
+	margin-top: 10%;
+	flex-grow: 1;
+    max-height: 100%;
+    text-align: center;
+    background-color: white;
+    margin-top: 3%;
+    height: 87%;
+    float: left;
+    
+}
+
 .logo a{
 	padding-top: 10px;
 	font-size:2vw;
@@ -190,14 +202,13 @@ ul.social li .fa-google-plus:hover {
 }
 
 h2 {
-    color: #EAEAEA;
+    color: rgb(0, 0, 0);
     font-size: 2vw;
     font-weight: 300;
     text-transform: uppercase;
     word-spacing: 10px;
    font-family: 'Azonix';
-   text-shadow: 0 0 0.2em #000000, 0 0 0.2em #000000,
-        0 0 0.2em #000000;
+  
 }
 
 /*--timer--*/
@@ -539,7 +550,7 @@ input[type="email"] {
     margin-top: 2%;
     background:rgb(255, 255, 255);
 	width: 100%;
-    height: 8%;
+    height: 75px;
     line-height: 66px;
     display: flex;
     align-items: center;
@@ -549,13 +560,20 @@ input[type="email"] {
 .m-left{
     float: left;
     width: 25%;
+    height: 75px;
+    overflow:hidden;
+ 
 }
-
+.marker{
+    
+    width: 60px;
+}
 .m-center{
     float: left;
     width: 50%;
+    height: 100%;
     text-align: center;
-    padding-top: 15px;
+   
 }
 
 .m-right{
@@ -564,7 +582,7 @@ input[type="email"] {
     text-align: right;
     margin-right: 1%;
     padding-top: 10px;
-    background: red;
+   
 }
 .logo{
     width: 55px;
@@ -578,4 +596,87 @@ input[type="email"] {
 	margin: 0;
 	padding: 0;
 }
+.photo{
+    float: left;
+    width: 60%;
+    height: 90%;
+    
+}
+.escpace{
+    width: 100%;
+    height: 15%;
+    
+    
+}
+.photo-center{
+    
+    width: 90%;
+    height: 70%;
+    margin: auto;
+    overflow:hidden;
+    
+}
 
+.question{
+   
+    height: 10%;
+}
+
+.rep{
+   
+    float: right;
+    width: 40%;
+    height: 90%;
+}
+
+.escpace2{
+    width: 100%;
+    height: 30%;
+  
+}
+.bouts{
+
+    height: 50%;
+    width: 100%;
+}
+
+.bouts-left{
+   
+    float: left;
+    width: 50%;
+    height: 50%;
+}
+.bouts-right{
+  
+    float: right;
+    width: 50%;
+    height: 50%;
+}
+
+.bouts input[type="button"] {
+    border: none;
+    color: #fff;
+	font-size: 1vw;
+	text-align: center;
+    letter-spacing: 1px;
+	text-transform: uppercase;
+	
+    display: inline;
+    padding: 15px 18px;
+	padding: 15px 50px 15px 55px;
+	border-radius: 50px;
+	border: #E10F8E 3px solid;
+	background: rgb(0, 0, 0) ;
+	opacity: 0.95;
+    cursor: pointer;
+	width: 80%;
+    vertical-align: middle;
+    font-family: 'azonix', sans-serif;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	transition: all 0.5s;
+}
+
+.bouts input[type="button"]:hover{
+    background: #E10F8E;
+}
