--- a/template/pwa/pages/question.html
+++ b/template/pwa/pages/question.html
@@ -41,35 +41,50 @@
 	<body>
         <nav class="menu" role="navigation">
             <div class="m-left">
-                <div class="marker">
-                    <img src="../images/marker-blanc.png" />
-                </div>
-                
+                <h1 class="logo">
+                </h1>
             </div>
             <div class="m-center">
                 <h2>equipe</h2>
-                
-               
             </div>
         </nav>
         
 		<!-- main -->
 
-		<div class="all">
-			
-					
-			<div>
-				<br><br>
-				
-				<h1>Quel est votre lieu d'arrivée ?</h1><br>
-					
-				<form action="pages/choix2.html" method="get">
-					<input type="text" id="name" name="user_name" required>
-					<br><br>
-					<input type="Submit" value="Valider" >
-				</form>
-						
-			</div>
+		<div class="allq">
+            <div class="question">
+                 <br><h2>Quelle est la hauteur de la Tour Eiffel ?</h2>
+            </div>
+            
+		    <div class="photo">
+                <div class="escpace">
+                </div>
+                <div class="photo-center">
+                    <img src="../images/tour.jpg"   /><br><br>
+                </div>
+            </div>		
+			<div class="rep">
+                <div class="escpace2">
+                    
+                </div>
+                <div class="bouts" style="text-align: left;">
+                    <div class="bouts-left">
+                    <a href="question.html"><input type="button" value="250 m"></a>
+                    </div>
+                    <div class="bouts-right">
+                        <a href="question.html"><input type="button" value="300 m"></a>
+                    </div>
+                    <div class="escpace2">
+
+                    </div>
+                    <div class="bouts-left">
+                        <a href="question.html"><input type="button" value="324 m"></a>
+                    </div>
+                    <div class="bouts-right">
+                        <a href="question.html"><input type="button" value="350 m"></a>
+                    </div>
+                </div>
+            </div>
        		
 		</div>
 		<!-- //main-->
