--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -38,12 +38,13 @@
 
 	</head>
 	<body>
-
+		<div class="box">
 		<!-- main -->
 
 		<div class="main">
-			
+			<img src="images/bvall.png" style="width: 60%;"  />
             <div class="next">
+				<br><br><br>
                 <a href="pages/equipe.html"><input type="button" value="Continuer"></a>
             </div>
 		</div>
@@ -53,5 +54,6 @@
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 		<!-- //js -->
 		<script src="js/main.js"></script>
+	</div>
 	</body>
 </html>
