--- a/template/pwa/pages/question.html
+++ b/template/pwa/pages/question.html
@@ -53,37 +53,34 @@
 
 		<div class="allq">
             <div class="question">
-                 <br><h2>Quelle est la hauteur de la Tour Eiffel ?</h2>
+                <br><br><h2>Quelle est la hauteur de la Tour Eiffel ?</h2>
             </div>
-            
 		    <div class="photo">
-                <div class="escpace">
-                </div>
+                <div class="box2" >
                 <div class="photo-center">
-                    <img src="../images/tour.jpg"   /><br><br>
+                    
+                    <img src="../images/tour.jpg" />
+                </div>
                 </div>
             </div>		
 			<div class="rep">
-                <div class="escpace2">
-                    
-                </div>
+                <div class="box2" >
                 <div class="bouts" style="text-align: left;">
-                    <div class="bouts-left">
-                    <a href="question.html"><input type="button" value="250 m"></a>
+                    <div class="force-left">
+                        <a href="question.html"><input type="button" value="250 m"></a>
                     </div>
-                    <div class="bouts-right">
-                        <a href="question.html"><input type="button" value="300 m"></a>
+                    <div class="force-right">
+                    <a href="question.html"><input type="button" value="300 m"></a>
                     </div>
-                    <div class="escpace2">
-
-                    </div>
-                    <div class="bouts-left">
+                    <br>
+                    <div class="force-left">
                         <a href="question.html"><input type="button" value="324 m"></a>
                     </div>
-                    <div class="bouts-right">
+                    <div class="force-right">
                         <a href="question.html"><input type="button" value="350 m"></a>
                     </div>
                 </div>
+            </div>
             </div>
        		
 		</div>
