--- a/template/pwa/pages/equipe.html
+++ b/template/pwa/pages/equipe.html
@@ -45,13 +45,13 @@
 		
 	
 			<div class="header">
-				<br><br>
+				<br>
 				<img src="../images/marker-blanc.png" alt=""  width="19%" /><br><br>
-				<h1>ENNTRER LE NOM DE VOTRE EQUIPE</h1><br>
+				<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1><br>
 					
 				<form action="pages/choix2.html" method="get">
 					<input type="text" id="name" name="user_name" required>
-					<br><br>
+					<br>
 					<input type="Submit" value="Valider" >
 				</form>
 						
