--- a/template/pwa/pages/equipe.html
+++ b/template/pwa/pages/equipe.html
@@ -54,7 +54,7 @@
 					<br>
 					<input type="Submit" value="Valider" >
 				</form>
-						
+				<a href="choix2.html"><input type="button" value="test"></a>	
 			</div>
 					
 	
