--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -45,7 +45,7 @@
 			<img src="images/bvall.png" style="width: 60%;"  />
             <div class="next">
 				<br><br><br>
-                <a href="pages/equipe.html"><input type="button" value="Continuer"></a>
+                <a href="pages/concept.html"><input type="button" value="Continuer"></a>
             </div>
 		</div>
 		<!-- //main-->
