--- a/template/pwa/pages/question.html
+++ b/template/pwa/pages/question.html
@@ -13,7 +13,7 @@
 		<!-- Meta tag Keywords -->
 
 		<!-- css files -->
-		<link rel="stylesheet" href="../css/style.css" type="text/css" media="all" /> <!-- Style-CSS --> 
+		<link rel="stylesheet" href="../css/style2.css" type="text/css" media="all" /> <!-- Style-CSS --> 
 		<link rel="stylesheet" href="../css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
 		<link href="../css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
 		<link rel="stylesheet" href="/s/jquery.countdown.css" /><!-- //countdown css -->
@@ -41,7 +41,7 @@
 	<body>
         <nav class="menu" role="navigation">
             <div class="m-left">
-                <h1 class="logo">
+              
                 </h1>
             </div>
             <div class="m-center">
@@ -53,7 +53,7 @@
 
 		<div class="allq">
             <div class="question">
-                <br><br><h2>Quelle est la hauteur de la Tour Eiffel ?</h2>
+                <br><br><h3>Quelle est la hauteur de la Tour Eiffel ?</h3>
             </div>
 		    <div class="photo">
                 <div class="box2" >
