--- a/template/pwa/css/style.css
+++ b/template/pwa/css/style.css
@@ -43,6 +43,7 @@ body,html{
 	margin:0; 
     font-size: 100%;
     height: 100%;
+    width: 100%;
 	display: flex; flex-direction: column; min-height: 100vh;
 }	 
  @font-face {
@@ -85,6 +86,8 @@ body {
 	-o-background-size: cover;
 	background-repeat: no-repeat;
 }
+
+
 
 
 
@@ -202,7 +205,7 @@ ul.social li .fa-google-plus:hover {
 }
 
 h2 {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 2vw;
     font-weight: 300;
     text-transform: uppercase;
@@ -557,7 +560,7 @@ input[type="email"] {
 }
 .menu{
     margin-top: 2%;
-    background:rgb(255, 255, 255);
+    
 	width: 100%;
     height: 75px;
     line-height: 66px;
@@ -703,5 +706,70 @@ input[type="email"] {
 }
 
 .bouts input[type="button"]:hover{
+    background: #E10F8E;
+}
+
+.concept{
+    width: 40%;
+    height: 14%;
+    margin-top: 8%;
+    margin-left: 7%;
+}
+ p{
+    color: #EAEAEA;
+    font-size: 1.5vw;
+    font-weight: bold;
+   
+    word-spacing: 10px;
+   font-family: 'calibri';
+   
+ }
+
+.text{
+    width: 85%;
+    height: 46%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.text2{
+    margin-left: 8%;
+    width: 90%;
+    height: auto;
+    
+}
+
+.btn-concept{
+    margin-top: 4%;
+    width: 80%;
+    margin-left: 7%;
+}
+
+
+.btn-concept input[type="button"] {
+    border: none;
+    color: #fff;
+	font-size: 2vw;
+	text-align: center;
+    letter-spacing: 1px;
+	text-transform: uppercase;
+	
+    display: inline;
+    padding: 15px 18px;
+	padding: 15px 50px 15px 55px;
+	border-radius: 10px;
+	border: black 3px solid;
+	background: #713B95 ;
+	opacity: 0.95;
+    cursor: pointer;
+	width: 35%;
+    vertical-align: middle;
+    font-family: 'azonix', sans-serif;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	transition: all 0.5s;
+	
+	
+}
+.btn-concept input[type="button"]:hover{
     background: #E10F8E;
 }
