--- a/template/pwa/pages/choix2.html
+++ b/template/pwa/pages/choix2.html
@@ -13,7 +13,7 @@
 		<!-- Meta tag Keywords -->
 
 		<!-- css files -->
-		<link rel="stylesheet" href="../css/style.css" type="text/css" media="all" /> <!-- Style-CSS --> 
+		<link rel="stylesheet" href="../css/style2.css" type="text/css" media="all" /> <!-- Style-CSS --> 
 		<link rel="stylesheet" href="../css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
 		<link href="../css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
 		<link rel="stylesheet" href="/s/jquery.countdown.css" /><!-- //countdown css -->
