--- a/template/pwa/pages/concept.html
+++ b/template/pwa/pages/concept.html
@@ -13,7 +13,7 @@
 		<!-- Meta tag Keywords -->
 
 		<!-- css files -->
-		<link rel="stylesheet" href="../css/style2.css" type="text/css" media="all" /> <!-- Style-CSS --> 
+		<link rel="stylesheet" href="../css/style.css" type="text/css" media="all" /> <!-- Style-CSS --> 
 		<link rel="stylesheet" href="../css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
 		<link href="../css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
 		<link rel="stylesheet" href="/s/jquery.countdown.css" /><!-- //countdown css -->
@@ -38,44 +38,22 @@
 		<!-- //google fonts -->
 
 	</head>
-	<body>
-        <nav class="menu" role="navigation">
-            <div class="m-left">
-                
-                
+	<body>     
+        <div class="concept">
+            <h1 style="font-size: 4vw;">Le concept</h1>
+        </div>
+        <div class="text">
+            <div class="text2">
+                <br>
+                <p>Bienvenue dans notre Escape Game touristique. <br><br>
+                    Montez à bord de notre bus pour arriver à une destination mystérieuse. <br>
+                    Avec les tablettes fournies, collecter des questions afin d'obtenir un maximum de points. <br><br>
+                    Lorsque vous obtenez une bonne réponse, vous recevrez un indice pour résoudre l’énigme du lieu d'arrivée. <br><br>
+                    Une fois arrivé à destination, vous pouvez visiter le lieu mystérieux et l'équipe gagnante aura la chance de gagner des places pour un lieu culturel. </p>
             </div>
-            <div class="m-center">
-                <h2>equipe</h2>
-                
-               
-            </div>
-        </nav>
-        
-		<!-- main -->
-
-		<div class="all">
-			
-					
-			<div>
-				<br><br>
-				
-				<h1>Quel est votre lieu d'arrivée ?</h1><br>
-					
-				<form action="pages/choix2.html" method="get">
-					<input type="text" id="name" name="user_name" required>
-					<br><br>
-					<input type="Submit" value="Valider" >
-				</form>
-						
-			</div>
-       		
-		</div>
-		<!-- //main-->
-
-		<!-- js -->
-		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-		<!-- //js -->
-        <script src="js/main.js"></script>
-   
+        </div>
+        <div class="btn-concept">
+            <a href="equipe.html"><input type="button" value="Continuer"></a>
+        </div>
 	</body>
 </html>
