--- a/template/pwa/pages/map.html
+++ b/template/pwa/pages/map.html
@@ -40,21 +40,21 @@
 	</head>
 	<body>
 		
-			<nav class="menu" role="navigation">
-				<div class="m-left">
-					<h1 class="logo">
-					</h1>
+			<nav class="menu" role="navigation" >
+				<div class="m-left"  style="margin-top: 3%;">
+					<p>Equipe : EQUIPE</p>		
 				</div>
-				<div class="m-center">
+				<div class="m-center"  style="margin-top: 3%;">
 					<h1>SCORE : X POINT(S)</h1>
 				</div>
-				<div class="m-right">
-					<a href="map.html" class="m-link">Lieu d'arivée</a>
-				</div>
+				
+				<div class="m-right"  style="margin-top: 3%;">
+				<p><a href="lieu.html" class="m-link">Lieu d'arivée</a></p>
+			</div>
 			</nav>
 	
 		<div class="route">
-			<img src="../images/bus.png" alt=""  height="90%" />
+			<img src="../images/bus.png" alt=""  height="90%" style="margin-top: 1.6%;" />
 		</div>
 		<div id="map">
 			<object type="text/html" data="loc.html" width="100%" height="100%" ></object>
