--- a/template/pwa/css/style-rep.css
+++ b/template/pwa/css/style-rep.css
@@ -79,7 +79,7 @@ a:hover{
 /*--main--*/
 /*--header start here--*/
 body {
-    background-image: url("../images/Escape_game2.jpg");
+    background-image: url("../images/eiffel-tower-11.png");
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -195,14 +195,15 @@ ul.social li .fa-google-plus:hover {
     padding: 2em 0em;
 }
  h1 {
-    color: #EAEAEA;
-    font-size: 3vw;
+    color:#E10F8E;
+    font-size: 7vw;
     font-weight: 300;
     text-transform: uppercase;
     word-spacing: 10px;
-   font-family: 'Azonix';
-   text-shadow: 0 0 0.2em #000000, 0 0 0.2em #000000,
-        0 0 0.2em #000000;
+   font-family: 'calibri';
+   font-weight: bold;
+   text-shadow: 2px 0 0 rgb(0, 0, 0), 2px 2px 0 rgb(2, 2, 2), 0 2px 0 rgb(8, 8, 8), -2px 2px 0 rgb(0, 0, 0), -2px 0 0 rgb(0, 0, 0), -2px -2px 0 rgb(0, 0, 0), 0 -2px 0 rgb(0, 0, 0), 2px -2px 0 rgb(0, 0, 0);
+  
 }
 
 h2 {
@@ -380,25 +381,26 @@ input[type="button"] {
     display: inline;
     padding: 15px 18px;
 	padding: 15px 50px 15px 55px;
-	border-radius: 10px;
-	border: black 3px solid;
-	background: #713B95 ;
+	border-radius: 50px;
+	border: #E10F8E 3px solid;
+	background: rgb(0, 0, 0) ;
 	opacity: 0.95;
     cursor: pointer;
-	width: 20%;
+    width: 20%;
+    height: 40%;
     vertical-align: middle;
     font-family: 'azonix', sans-serif;
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
 	transition: all 0.5s;
-	
-	
 }
-input[type="button"]:hover{
-	background: #E10F8E;
+
+ input[type="button"]:hover{
+    background: #E10F8E;
+}
 
 	
-}
+
 input[type="text"] {
 	border: none;
 	box-shadow: 0 0 0.2em #000000, 0 0 0.2em #000000,
