--- a/template/pwa/pages/mauvaise-rep.html
+++ b/template/pwa/pages/mauvaise-rep.html
@@ -44,9 +44,9 @@
 		<!-- main -->
 
 		<div class="main">
-            <h1>Bonne réponse</h1>
-            <img src="../images/100pts.png" style="width: 25%;"/><br><br>
-            <img src="../images/bon.png" style="width: 10%;"/>
+            <h1>mauvaise réponse</h1>
+            <img src="../images/0pts.png" style="width: 25%;"/><br><br>
+            <img src="../images/no.png" style="width: 10%;"/>
             <div class="next">
 				<br><br><br>
                 <a href="pages/concept.html"><input type="button" value="suivant"></a>
