--- a/template/pwa/pages/classement.html
+++ b/template/pwa/pages/classement.html
@@ -14,7 +14,7 @@
 		<!-- Meta tag Keywords -->
 
 		<!-- css files -->
-		<link rel="stylesheet" href="../css/style-rep.css" type="text/css" media="all" /> <!-- Style-CSS --> 
+		<link rel="stylesheet" href="../css/style-class.css" type="text/css" media="all" /> <!-- Style-CSS --> 
 		<link rel="stylesheet" href="../css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
 		<link href="../css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
 		<link rel="stylesheet" href="/s/jquery.countdown.css" /><!-- //countdown css -->
@@ -40,24 +40,38 @@
 
 	</head>
 	<body>
-		<div class="box">
+		
 		<!-- main -->
 
-		<div class="main">
-            <h1>Bonne réponse</h1>
-            <img src="../images/100pts.png" style="width: 25%;"/><br><br>
-            <img src="../images/bon.png" style="width: 10%;"/>
-            <div class="next">
-				<br><br><br>
-                <a href="pages/concept.html"><input type="button" value="suivant"></a>
+		<div class="log">
+			<img src="../images/marker.png" width="40%"/>
+        </div>
+        <div class="text-classement">
+			<br><h1>Classement</h1>
+        </div>
+        <div class="classement">
+            <div class="premier">
+
             </div>
-		</div>
+            <div class="reste">
+                <div class="deuxieme">
+
+                </div>
+                <div class="troisieme">
+
+                </div>
+                <div class="quartieme">
+
+                </div>
+
+            </div>
+        </div>
 		<!-- //main-->
 
 		<!-- js -->
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 		<!-- //js -->
 		<script src="js/main.js"></script>
-	</div>
+	
 	</body>
 </html>
