--- a/template/pwa/pages/equipe.html
+++ b/template/pwa/pages/equipe.html
@@ -49,8 +49,8 @@
 				<img src="../images/marker-blanc.png" alt=""  width="19%" /><br><br>
 				<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1><br>
 					
-				<form action="pages/choix2.html" method="get">
-					<input type="text" id="name" name="user_name" required>
+				<form action="choix2.html" method="GET">
+					<input type="text" id="name" name="name" required>
 					<br>
 					<input type="Submit" value="Valider" >
 				</form>
