--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -22,13 +22,13 @@
 		<meta name="theme-color" content="white"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/png" href="images/favicon.png" />
-		<link rel="icon" href="favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="images/hello-icon-152.png">
+		<link rel="icon" href="favicon.icon" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="images/esc-icon-152.png">
 		<meta name="theme-color" content="white"/>
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="apple-mobile-web-app-title" content="Hello World">
-		<meta name="msapplication-TileImage" content="images/hello-icon-144.png">
+		<meta name="msapplication-TileImage" content="images/esc-icon-144.png">
 		<meta name="msapplication-TileColor" content="#FFFFFF">
 
 		<!-- google fonts -->
