--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -14,7 +14,7 @@
 		<!-- css files -->
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="all" /> <!-- Style-CSS --> 
 		<link rel="stylesheet" href="css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
-		<link href="css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
+		
 		<link rel="stylesheet" href="css/jquery.countdown.css" /><!-- //countdown css -->
 		<!-- //css files -->
 
@@ -22,7 +22,7 @@
 		<meta name="theme-color" content="white"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/png" href="images/favicon.png" />
-		<link rel="icon" href="favicon.icon" type="image/x-icon" />
+		<link rel="icon" href="images/favicon.icon" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="images/esc-icon-152.png">
 		<meta name="theme-color" content="white"/>
 		<meta name="apple-mobile-web-app-capable" content="yes">
