--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -19,17 +19,17 @@
 		<!-- //css files -->
 
 		<link rel="manifest" href="manifest.json">
-		<meta name="theme-color" content="white"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/png" href="images/favicon.png" />
-		<link rel="icon" href="images/favicon.icon" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="images/esc-icon-152.png">
-		<meta name="theme-color" content="white"/>
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<meta name="apple-mobile-web-app-title" content="Hello World">
-		<meta name="msapplication-TileImage" content="images/esc-icon-144.png">
-		<meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="theme-color" content="white"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+<link rel="apple-touch-icon" href="images/esc-icon-152.png">
+<meta name="theme-color" content="white"/>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Hello World">
+<meta name="msapplication-TileImage" content="images/esc-icon-144.png">
+<meta name="msapplication-TileColor" content="#FFFFFF">
 
 		<!-- google fonts -->
 		<link href="//fonts.googleapis.com/css?family=Cinzel:400,700,900&amp;subset=latin-ext" rel="stylesheet">
