--- a/template/pwa/pages/map.html
+++ b/template/pwa/pages/map.html
@@ -59,7 +59,7 @@
 				</div>
 				
 				<div class="m-right"  style="margin-top: 3%;">
-				<p><a href="lieu.html" class="m-link">Lieu d'arivée</a></p>
+				<p><a href="lieux.html" class="m-link">Lieu d'arivée</a></p>
 			</div>
 			</nav>
 	
