--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="css/jquery.countdown.css" /><!-- //countdown css -->
 		<!-- //css files -->
 
-		<link rel="manifest" href="/manifest.json">
+		<link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="white"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
