--- a/template/pwa/pages/equipe.html
+++ b/template/pwa/pages/equipe.html
@@ -49,7 +49,7 @@
 				<img src="../images/marker-blanc.png" alt=""  width="19%" /><br><br>
 				<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1><br>
 					
-				<form action="choix2.html" method="GET">
+				<form action="choix2.html" method="GET" id="monFormulaire">
 					<input type="text" id="name" name="name" required>
 					<br>
 					<input type="Submit" value="Valider" >
