--- a/template/pwa/pages/bonne-rep.html
+++ b/template/pwa/pages/bonne-rep.html
@@ -49,7 +49,7 @@
             <img src="../images/bon.png" style="width: 10%;"/>
             <div class="next">
 				<br><br><br>
-                <a href="pages/concept.html"><input type="button" value="suivant"></a>
+                <a href="map.html"><input type="button" value="suivant"></a>
             </div>
 		</div>
 		<!-- //main-->
